# mnist_classification

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Notebook1.ipynb
project2/: __init__.py  dataset.py  features.py  plots.py
project2/modeling/: predict.py  train.py
